syntax = "proto3";
package dbus;
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


message Credential {
    string username = 1;
    string password = 2;
}

// set up connection between user and GM
service Connection {
    rpc connect (ConnectRequest) returns (ConnectResponse);
}
message ConnectRequest {
    Credential cred = 1;
    optional int32 timeout = 2;
    optional bool createUser = 3;
}
enum ConnectionRC {
    SUCCESSFUL = 0;
    FAILED = 1;
    TIMEOUT = 2;
}
message ConnectResponse {
    ConnectionRC rc = 1;
    string resp = 2;
}


// register a DLT Client (DLTC) to the Global Manager (GM)
service Registration {
    rpc register (RegisterRequest) returns (RegisterResponse);
    rpc deregister (DeregisterRequest) returns (DeregisterResponse);
}
message ResourceInfo { // Pod resource info, load from proc file system
    int32 CPUMemoryFree = 1;
    int32 GPUMemoryFree = 2;
}
message S3Auth {
    optional string aws_access_key_id = 1;
    optional string aws_secret_access_key = 2;
    string region_name = 3;
    string bucket = 4;
    repeated string keys = 5;
}
message RegisterRequest {
    Credential cred = 1;
    string dataset = 2;
    S3Auth s3auth = 3;
    optional bool useCache = 4;
    optional int32 flushFreq = 5;
    optional int32 durabilityInMem = 6;
    optional int32 durabilityInDisk = 7;
    optional ResourceInfo resource = 8;
}
message RegisterResponse {
    oneof response {
        RegisterSuccess regsucc = 1;
        RegisterError regerr = 2;
    }
}
message Policy {
    int32 chunkSize = 4;
    repeated string chunkKeys = 5;
}
message RedisAuth {
    string host = 1;
    int32 port = 2;
    string username = 3;
    string password = 4;
}
message JobInfo {
    string jobId = 1;
    string token = 2;
    optional google.protobuf.Timestamp createTime = 3;
    optional google.protobuf.Timestamp tokenTimeout = 4;
    optional RedisAuth redisauth = 5;
}
message RegisterSuccess {
    JobInfo jinfo = 1;
    Policy policy = 2;
}
message RegisterError {
    string error = 1;
}
// actively evict memory when DLT job deregister
message DeregisterRequest {
    JobInfo jinfo = 1;
    optional bool deleteDataset = 2;
}
message DeregisterResponse {
    string response = 1;
}

// When key is not available, CC request GM to update policy
service CacheMiss {
    rpc call (CacheMissRequest) returns (CacheMissResponse) {};
}
message CacheMissRequest {
    string key = 1;
}
message CacheMissResponse {
    bool response = 1;
}

service Heartbeat {
    rpc call (HearbeatMessage) returns (HearbeatMessage) {}; 
}
message HearbeatMessage {
    JobInfo jinfo = 1;
}

// CC periodically sends log messages tO GM
service Logger {
    rpc call (stream LogItem) returns (google.protobuf.Empty) {};
}
enum LogLevel {
    INFO = 0;
    DEBUG = 1;
    ERROR = 2;
}
message LogItem {
    google.protobuf.Timestamp time = 1;
    string jobId = 2;
    LogLevel level = 3;
    int32 epoch = 4;
    string details = 5;
}